--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,7 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.7.0",
+    "cloudinary": "^2.8.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -43,6 +43,7 @@
     "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.9",
     "pdfkit": "^0.15.0",
     "qrcode": "^1.5.4",
