Updated project files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,101 +1,153 @@
-# Server Configuration
+# ==========================================
+# LARAIB CREATIVE - ENVIRONMENT VARIABLES
+# ==========================================
+# Copy this file to .env and fill in your values
+# ==========================================
+
+# SERVER
 NODE_ENV=development
 PORT=5000
+API_URL=http://localhost:5000
+
+# FRONTEND
 FRONTEND_URL=http://localhost:3000
 
-# MongoDB Configuration
-MONGODB_URI=mongodb://localhost:27017/laraibcreative
-# For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/laraibcreative?retryWrites=true&w=majority
+# DATABASE
+MONGODB_URI=your_mongodb_connection_string
 
-# JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
-JWT_EXPIRE=7d
+# JWT
+JWT_SECRET=your_jwt_secret_key_min_32_chars
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
+JWT_EXPIRE=24h
+JWT_REFRESH_EXPIRE=7d
 JWT_COOKIE_EXPIRE=7
 
-# Cloudinary Configuration (Image Storage)
+# CLOUDINARY
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
-# Email Configuration (Nodemailer with Gmail)
-EMAIL_SERVICE=gmail
+# EMAIL (Gmail SMTP)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
+EMAIL_SECURE=false
 EMAIL_USER=your_email@gmail.com
-EMAIL_PASSWORD=your_app_specific_password
-EMAIL_FROM=LaraibCreative <noreply@laraibcreative.com>
+EMAIL_PASSWORD=your_gmail_app_password
+EMAIL_FROM=Your Business Name <your_email@gmail.com>
+EMAIL_REPLY_TO=your_email@gmail.com
 
-# WhatsApp Configuration (Twilio)
+# TWILIO (WhatsApp)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
-BUSINESS_WHATSAPP_NUMBER=+923001234567
+TWILIO_PHONE_NUMBER=your_phone_number
 
-# Admin Configuration
-ADMIN_EMAIL=admin@laraibcreative.com
-ADMIN_PASSWORD=ChangeThisPassword123!
-ADMIN_NAME=Admin User
+# PAYMENT INFO
+BANK_NAME=Your Bank Name
+BANK_ACCOUNT_NUMBER=your_account_number
+BANK_ACCOUNT_TITLE=Your Name
+BANK_IBAN=your_iban
+BANK_BRANCH=Your Branch
+BANK_SWIFT_CODE=your_swift_code
+JAZZCASH_NUMBER=your_jazzcash_number
+JAZZCASH_ACCOUNT_NAME=Your Name
+EASYPAISA_NUMBER=your_easypaisa_number
+EASYPAISA_ACCOUNT_NAME=Your Name
+RAAST_ID=your_raast_id
 
-# Shipping Configuration
-DEFAULT_SHIPPING_CHARGE=200
-FREE_SHIPPING_THRESHOLD=5000
+# ADMIN
+ADMIN_EMAIL=admin@yourdomain.com
+ADMIN_PASSWORD=your_secure_password
+ADMIN_NAME=Admin Name
+ADMIN_PHONE=your_phone_number
 
-# Business Information
-BUSINESS_NAME=LaraibCreative
-BUSINESS_EMAIL=info@laraibcreative.com
-BUSINESS_PHONE=+923001234567
-BUSINESS_ADDRESS=Lahore, Punjab, Pakistan
-
-# Payment Configuration (Manual Bank Transfer)
-BANK_NAME=Bank Al Habib
-BANK_ACCOUNT_TITLE=LaraibCreative
-BANK_ACCOUNT_NUMBER=1234567890123456
-BANK_IBAN=PK12BAHL1234567890123456
-
-# JazzCash Configuration
-JAZZCASH_ACCOUNT_NAME=LaraibCreative
-JAZZCASH_ACCOUNT_NUMBER=03001234567
-
-# EasyPaisa Configuration
-EASYPAISA_ACCOUNT_NAME=LaraibCreative
-EASYPAISA_ACCOUNT_NUMBER=03001234567
-
-# File Upload Configuration
-MAX_FILE_SIZE=5242880
-ALLOWED_FILE_TYPES=image/jpeg,image/jpg,image/png,image/webp,application/pdf
-
-# Rate Limiting
+# SECURITY
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+BCRYPT_SALT_ROUNDS=12
+PASSWORD_MIN_LENGTH=8
 
-# Security
-BCRYPT_ROUNDS=12
+# FILE UPLOAD
+MAX_FILE_SIZE=5242880
+MAX_FILES_COUNT=10
+ALLOWED_FILE_TYPES=image/jpeg,image/jpg,image/png,image/webp,application/pdf
+UPLOAD_PATH=./uploads
 
-# Pagination
+# SESSION & COOKIES
+SESSION_SECRET=your_session_secret_min_32_chars
+COOKIE_SECRET=your_cookie_secret_min_32_chars
+COOKIE_SECURE=false
+COOKIE_HTTP_ONLY=true
+COOKIE_SAME_SITE=lax
+
+# CORS
+CORS_ORIGIN=http://localhost:3000
+CORS_CREDENTIALS=true
+
+# LOGGING
+ENABLE_LOGGING=true
+LOG_LEVEL=info
+LOG_FILE_PATH=./logs
+LOG_MAX_SIZE=10m
+LOG_MAX_FILES=14d
+
+# BUSINESS
+BUSINESS_NAME=Your Business Name
+BUSINESS_EMAIL=contact@yourdomain.com
+BUSINESS_PHONE=your_phone
+BUSINESS_ADDRESS=Your Address
+BUSINESS_WHATSAPP=your_whatsapp_number
+
+# SHIPPING
+SHIPPING_FEE_LAHORE=200
+SHIPPING_FEE_PAKISTAN=350
+SHIPPING_FEE_INTERNATIONAL=2500
+FREE_SHIPPING_THRESHOLD=5000
+
+# ORDERS
+ORDER_PREFIX=LC
+ORDER_NUMBER_LENGTH=6
+CUSTOM_ORDER_PROCESSING_TIME=7-14 days
+READY_MADE_PROCESSING_TIME=2-3 days
+
+# NOTIFICATIONS
+ENABLE_EMAIL_NOTIFICATIONS=true
+ENABLE_WHATSAPP_NOTIFICATIONS=true
+ENABLE_SMS_NOTIFICATIONS=false
+
+# PAGINATION
 DEFAULT_PAGE_SIZE=12
 MAX_PAGE_SIZE=100
 
-# Order Configuration
-ORDER_NUMBER_PREFIX=LC
-AUTO_CANCEL_PENDING_ORDERS_DAYS=7
+# SEO
+SITE_NAME=Your Site Name
+SITE_DESCRIPTION=Your site description
+SITE_KEYWORDS=your,keywords,here
+SITE_URL=http://localhost:3000
+SITE_LOGO=/images/logo.svg
 
-# Features
-ENABLE_EMAIL_NOTIFICATIONS=true
-ENABLE_WHATSAPP_NOTIFICATIONS=true
-ENABLE_COD=true
+# SOCIAL MEDIA
+FACEBOOK_URL=https://facebook.com/yourpage
+INSTAGRAM_URL=https://instagram.com/yourpage
+WHATSAPP_URL=https://wa.me/yourwhatsappnumber
+TIKTOK_URL=https://tiktok.com/@yourpage
 
-# SEO Configuration
-SITE_URL=https://laraibcreative.com
-DEFAULT_META_DESCRIPTION=Custom ladies suits stitching service in Pakistan. Designer replicas, bridal wear, party suits with perfect measurements.
+# FEATURE FLAGS
+ENABLE_CUSTOM_ORDERS=true
+ENABLE_REVIEWS=true
+ENABLE_BLOG=true
+ENABLE_WISHLIST=true
+ENABLE_GUEST_CHECKOUT=true
 
-# Analytics (Optional)
-GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
-FACEBOOK_PIXEL_ID=
+# TIMEZONE
+TIMEZONE=Asia/Karachi
+DEFAULT_LOCALE=en
+CURRENCY=PKR
+CURRENCY_SYMBOL=Rs.
 
-# Backup Configuration
-BACKUP_ENABLED=false
-BACKUP_INTERVAL_HOURS=24
-
-# Logging
-LOG_LEVEL=info
-LOG_MAX_FILES=14d
+# IMAGE OPTIMIZATION
+IMAGE_QUALITY=80
+IMAGE_MAX_WIDTH=1920
+IMAGE_MAX_HEIGHT=1920
+THUMBNAIL_WIDTH=300
+THUMBNAIL_HEIGHT=300
