--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,153 +1,50 @@
-# ==========================================
-# LARAIB CREATIVE - ENVIRONMENT VARIABLES
-# ==========================================
-# Copy this file to .env and fill in your values
-# ==========================================
-
-# SERVER
-NODE_ENV=development
+# Server Configuration
 PORT=5000
-API_URL=http://localhost:5000
+NODE_ENV=development
 
-# FRONTEND
-FRONTEND_URL=http://localhost:3000
-
-# DATABASE
-MONGODB_URI=your_mongodb_connection_string
+# Database
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/laraibcreative?retryWrites=true&w=majority
 
 # JWT
-JWT_SECRET=your_jwt_secret_key_min_32_chars
-JWT_REFRESH_SECRET=your_jwt_refresh_secret_key
-JWT_EXPIRE=24h
-JWT_REFRESH_EXPIRE=7d
-JWT_COOKIE_EXPIRE=7
+JWT_SECRET=your_super_secret_jwt_key_change_in_production_min_32_chars
+JWT_EXPIRE=7d
 
-# CLOUDINARY
+# Cloudinary (Image Upload)
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
-# EMAIL (Gmail SMTP)
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_SECURE=false
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASSWORD=your_gmail_app_password
-EMAIL_FROM=Your Business Name <your_email@gmail.com>
-EMAIL_REPLY_TO=your_email@gmail.com
+# Email (Nodemailer)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password
+SMTP_FROM_EMAIL=noreply@laraibcreative.com
+SMTP_FROM_NAME=LaraibCreative
 
-# TWILIO (WhatsApp)
+# WhatsApp (Twilio)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
-TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
-TWILIO_PHONE_NUMBER=your_phone_number
+TWILIO_WHATSAPP_NUMBER=+1234567890
 
-# PAYMENT INFO
-BANK_NAME=Your Bank Name
-BANK_ACCOUNT_NUMBER=your_account_number
-BANK_ACCOUNT_TITLE=Your Name
-BANK_IBAN=your_iban
-BANK_BRANCH=Your Branch
-BANK_SWIFT_CODE=your_swift_code
-JAZZCASH_NUMBER=your_jazzcash_number
-JAZZCASH_ACCOUNT_NAME=Your Name
-EASYPAISA_NUMBER=your_easypaisa_number
-EASYPAISA_ACCOUNT_NAME=Your Name
-RAAST_ID=your_raast_id
+# Frontend URL (for CORS)
+FRONTEND_URL=http://localhost:3000
 
-# ADMIN
-ADMIN_EMAIL=admin@yourdomain.com
-ADMIN_PASSWORD=your_secure_password
-ADMIN_NAME=Admin Name
-ADMIN_PHONE=your_phone_number
+# Payment Gateway (Future Integration)
+STRIPE_SECRET_KEY=sk_test_your_key
+STRIPE_PUBLIC_KEY=pk_test_your_key
 
-# SECURITY
+# Admin Settings
+ADMIN_EMAIL=admin@laraibcreative.com
+
+# Logging
+LOG_LEVEL=debug
+LOG_DIR=./logs
+
+# Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
-BCRYPT_SALT_ROUNDS=12
-PASSWORD_MIN_LENGTH=8
 
-# FILE UPLOAD
-MAX_FILE_SIZE=5242880
-MAX_FILES_COUNT=10
-ALLOWED_FILE_TYPES=image/jpeg,image/jpg,image/png,image/webp,application/pdf
-UPLOAD_PATH=./uploads
-
-# SESSION & COOKIES
-SESSION_SECRET=your_session_secret_min_32_chars
-COOKIE_SECRET=your_cookie_secret_min_32_chars
-COOKIE_SECURE=false
-COOKIE_HTTP_ONLY=true
-COOKIE_SAME_SITE=lax
-
-# CORS
+# Security
 CORS_ORIGIN=http://localhost:3000
-CORS_CREDENTIALS=true
-
-# LOGGING
-ENABLE_LOGGING=true
-LOG_LEVEL=info
-LOG_FILE_PATH=./logs
-LOG_MAX_SIZE=10m
-LOG_MAX_FILES=14d
-
-# BUSINESS
-BUSINESS_NAME=Your Business Name
-BUSINESS_EMAIL=contact@yourdomain.com
-BUSINESS_PHONE=your_phone
-BUSINESS_ADDRESS=Your Address
-BUSINESS_WHATSAPP=your_whatsapp_number
-
-# SHIPPING
-SHIPPING_FEE_LAHORE=200
-SHIPPING_FEE_PAKISTAN=350
-SHIPPING_FEE_INTERNATIONAL=2500
-FREE_SHIPPING_THRESHOLD=5000
-
-# ORDERS
-ORDER_PREFIX=LC
-ORDER_NUMBER_LENGTH=6
-CUSTOM_ORDER_PROCESSING_TIME=7-14 days
-READY_MADE_PROCESSING_TIME=2-3 days
-
-# NOTIFICATIONS
-ENABLE_EMAIL_NOTIFICATIONS=true
-ENABLE_WHATSAPP_NOTIFICATIONS=true
-ENABLE_SMS_NOTIFICATIONS=false
-
-# PAGINATION
-DEFAULT_PAGE_SIZE=12
-MAX_PAGE_SIZE=100
-
-# SEO
-SITE_NAME=Your Site Name
-SITE_DESCRIPTION=Your site description
-SITE_KEYWORDS=your,keywords,here
-SITE_URL=http://localhost:3000
-SITE_LOGO=/images/logo.svg
-
-# SOCIAL MEDIA
-FACEBOOK_URL=https://facebook.com/yourpage
-INSTAGRAM_URL=https://instagram.com/yourpage
-WHATSAPP_URL=https://wa.me/yourwhatsappnumber
-TIKTOK_URL=https://tiktok.com/@yourpage
-
-# FEATURE FLAGS
-ENABLE_CUSTOM_ORDERS=true
-ENABLE_REVIEWS=true
-ENABLE_BLOG=true
-ENABLE_WISHLIST=true
-ENABLE_GUEST_CHECKOUT=true
-
-# TIMEZONE
-TIMEZONE=Asia/Karachi
-DEFAULT_LOCALE=en
-CURRENCY=PKR
-CURRENCY_SYMBOL=Rs.
-
-# IMAGE OPTIMIZATION
-IMAGE_QUALITY=80
-IMAGE_MAX_WIDTH=1920
-IMAGE_MAX_HEIGHT=1920
-THUMBNAIL_WIDTH=300
-THUMBNAIL_HEIGHT=300
+ALLOW_CREDENTIALS=true
