chore: configure laraibcreative.studio domain for production deployment
- Update frontend .env with production API URL (laraibcreative-backend.onrender.com)
- Update next.config.js image domains to include laraibcreative.studio
- Update Dockerfile build args for production domain
- Update backend .env.render with CORS origin for laraibcreative.studio
- Create vercel.json with domain configuration and environment variables
- Configure URL rewrites and redirects for Vercel deployment
- Add security headers and CORS configuration for production

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -26,9 +26,9 @@ RUN npm ci --legacy-peer-deps
 COPY . .
 
 # Build arguments for environment variables
-ARG NEXT_PUBLIC_API_URL=http://localhost:5000/api
-ARG NEXT_PUBLIC_APP_URL=http://localhost:3000
-ARG NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME
+ARG NEXT_PUBLIC_API_URL=https://laraibcreative-backend.onrender.com
+ARG NEXT_PUBLIC_APP_URL=https://laraibcreative.studio
+ARG NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dkzqbo109
 
 # Set build-time environment variables
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
