--- a/backend/package.json
+++ b/backend/package.json
@@ -28,22 +28,20 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.8.0",
-    "compression": "^1.8.1",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.5.1",
-    "express-validator": "^7.3.0",
-    "helmet": "^7.2.0",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "mongodb": "^6.20.0",
-    "mongoose": "^8.19.3",
-    "morgan": "^1.10.1",
+    "mongoose": "^8.6.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.9",
@@ -53,8 +51,7 @@
     "slugify": "^1.6.6",
     "twilio": "^5.3.2",
     "validator": "^13.12.0",
-    "winston": "^3.18.3",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "eslint": "^9.10.0",
@@ -68,8 +65,8 @@
     "supertest": "^7.0.0"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "node": "18.20.0",
+    "npm": "10.0.0"
   },
   "repository": {
     "type": "git",
