--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,8 +60,8 @@
     "typescript": "^5.6.3"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "node": "18.20.0",
+    "npm": "10.0.0"
   },
   "keywords": [
     "ecommerce",
