feat(backend): production server, env validation, seeds, WhatsApp updates, and rate limits

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ uploads/
 logs/
 dist/
 .DS_Store
+
+# Sensitive deployment artifact (contains credentials) – never commit
+DEPLOYMENT_IN_PROGRESS.txt
