--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint src/**/*.js --fix",
-    "backup": "node scripts/backup-db.js"
+    "backup": "node scripts/backup-db.js",
+    "verify-indexes": "node src/utils/verifyIndexes.js"
   },
   "keywords": [
     "ecommerce",
@@ -51,10 +52,11 @@
     "slugify": "^1.6.6",
     "twilio": "^5.3.2",
     "validator": "^13.12.0",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "eslint": "^9.10.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
@@ -65,8 +67,8 @@
     "supertest": "^7.0.0"
   },
   "engines": {
-    "node": "18.20.0",
-    "npm": "10.0.0"
+    "node": ">=18.20.0",
+    "npm": ">=10.0.0"
   },
   "repository": {
     "type": "git",
