--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -26,5 +26,5 @@
     "types": ["node", "react", "react-dom"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "playwright.config.ts", "e2e"]
+  "exclude": ["node_modules", "playwright.config.ts", "e2e", "src/__tests__"]
 }
