--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.0",
+    "express-validator": "^7.3.1",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "joi": "^17.13.3",
