--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "sharp": "^0.33.5",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
+    "yup": "^1.7.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
