--- a/backend/package.json
+++ b/backend/package.json
@@ -4,18 +4,21 @@
   "description": "Backend API for LaraibCreative - Custom tailoring e-commerce platform",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "seed": "node src/seeds/index.js",
-    "seed:categories": "node src/seeds/categories.seed.js",
-    "seed:products": "node src/seeds/products.seed.js",
-    "seed:settings": "node src/seeds/settings.seed.js",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev:watch": "nodemon --exec ts-node src/server.ts",
+    "seed": "ts-node src/seeds/index.ts",
+    "seed:categories": "ts-node src/seeds/categories.seed.ts",
+    "seed:products": "ts-node src/seeds/products.seed.ts",
+    "seed:settings": "ts-node src/seeds/settings.seed.ts",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.js",
-    "lint:fix": "eslint src/**/*.js --fix",
-    "backup": "node scripts/backup-db.js",
-    "verify-indexes": "node src/utils/verifyIndexes.js"
+    "lint": "eslint src/**/*.{ts,js}",
+    "lint:fix": "eslint src/**/*.{ts,js} --fix",
+    "type-check": "tsc --noEmit",
+    "backup": "ts-node scripts/backup-db.ts",
+    "verify-indexes": "ts-node src/utils/verifyIndexes.ts"
   },
   "keywords": [
     "ecommerce",
@@ -57,9 +60,28 @@
     "validator": "^13.12.0",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0",
-    "xss-clean": "^0.1.4"
+    "xss-clean": "^0.1.4",
+    "zod": "^3.23.8",
+    "rate-limiter-flexible": "^5.0.3",
+    "@sentry/node": "^8.0.0",
+    "@sentry/profiling-node": "^8.0.0",
+    "cls-rtracer": "^2.2.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.11.0",
+    "@types/nodemailer": "^6.4.14",
+    "@types/qrcode": "^1.5.5",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -68,7 +90,11 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.20.0",
