--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,8 @@
     "tailwind-merge": "^2.5.4",
     "yup": "^1.7.1",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "@sentry/nextjs": "^8.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
