--- a/backend/package.json
+++ b/backend/package.json
@@ -65,7 +65,9 @@
     "rate-limiter-flexible": "^5.0.3",
     "@sentry/node": "^8.0.0",
     "@sentry/profiling-node": "^8.0.0",
-    "cls-rtracer": "^2.2.0"
+    "cls-rtracer": "^2.2.0",
+    "@trpc/server": "^11.0.0",
+    "superjson": "^2.2.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
