--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,7 +50,16 @@
     "yup": "^1.7.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.0",
-    "@sentry/nextjs": "^8.0.0"
+    "@sentry/nextjs": "^8.0.0",
+    "@trpc/server": "^11.0.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@trpc/next": "^11.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "next-intl": "^3.0.0",
+    "@vercel/analytics": "^1.0.0",
+    "@vercel/speed-insights": "^1.0.0",
+    "superjson": "^2.2.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
