--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,16 @@
     "analyze:browser": "ANALYZE=true BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.9.0",
+    "@sentry/nextjs": "^8.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/next": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@trpc/server": "^11.0.0",
+    "@vercel/analytics": "^1.0.0",
+    "@vercel/speed-insights": "^1.0.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
@@ -37,6 +46,7 @@
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.451.0",
     "next": "^14.2.15",
+    "next-intl": "^3.26.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
@@ -45,24 +55,15 @@
     "react-intersection-observer": "^9.13.1",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
+    "superjson": "^2.2.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "yup": "^1.7.1",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0",
-    "@sentry/nextjs": "^8.0.0",
-    "@trpc/server": "^11.0.0",
-    "@trpc/client": "^11.0.0",
-    "@trpc/react-query": "^11.0.0",
-    "@trpc/next": "^11.0.0",
-    "@tanstack/react-query": "^5.0.0",
-    "next-intl": "^3.0.0",
-    "@vercel/analytics": "^1.0.0",
-    "@vercel/speed-insights": "^1.0.0",
-    "superjson": "^2.2.1",
-    "@hello-pangea/dnd": "^16.3.0"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.15",
     "@playwright/test": "^1.40.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
@@ -88,8 +89,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.6.3",
-    "@next/bundle-analyzer": "^14.2.15"
+    "typescript": "5.6.3"
   },
   "engines": {
     "node": "22.x",
