--- a/frontend/package.json
+++ b/frontend/package.json
@@ -90,7 +90,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.6.3"
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": "22.x",
