feat: implement secure admin authentication with JWT
- Add admin-login endpoint with role verification
- Implement ProtectedAdminRoute component for frontend
- Create admin user seed script (email: admin@laraibcreative.studio)
- Update admin layout with proper authentication checks
- Add enhanced admin login page with error handling
- Include logout functionality
- Protect admin routes from unauthorized access

Default Admin Credentials:
Email: admin@laraibcreative.studio
Password: Admin@12345 (change after first login)

Login URL: https://laraibcreative.studio/admin/login

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "dev:watch": "nodemon --exec ts-node src/server.ts",
     "seed": "ts-node src/seeds/index.ts",
+    "seed:admin": "node src/seeds/adminUser.js",
     "seed:categories": "ts-node src/seeds/categories.seed.ts",
     "seed:products": "ts-node src/seeds/products.seed.ts",
     "seed:settings": "ts-node src/seeds/settings.seed.ts",
