feat(supabase): Add Supabase client configuration and database schema
- Add Supabase browser, server, and admin clients
- Add TypeScript types for database schema
- Add SupabaseAuthContext for authentication
- Add database migrations with RLS policies
- Add environment template file
- Update .gitignore to allow Supabase migrations

--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,10 @@ PROVIDE_YOUR_INFO.txt
 .cache/
 
 # Database backups (may contain sensitive data)
-*.sql
 *.dump
 backups/
 *.backup
+
+# SQL files (except Supabase migrations)
+*.sql
+!supabase/migrations/*.sql
