--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.9.0",
     "@sentry/nextjs": "^8.0.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.84.0",
     "@tanstack/react-query": "^5.0.0",
     "@trpc/client": "^11.0.0",
     "@trpc/next": "^11.0.0",
