--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "analyze:browser": "ANALYZE=true BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "@tidbcloud/serverless": "^0.2.0",
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.9.0",
     "@sentry/nextjs": "^8.0.0",
