fix: resolve TypeScript errors, Tailwind CSS classes, and image optimization warnings
- Fix TypeScript errors by removing duplicate table definitions in supabase.ts
- Fix Supabase update() type issues with proper type assertions
- Fix Tailwind CSS invalid class names (neutral-text-primary, neutral-border, etc.)
- Add missing brand-pink, brand-purple, brand-rose-gold colors to tailwind config
- Add unoptimized prop to SVG images to fix Next.js Image loader warning
- Remove incorrect font preload links (Next.js handles font loading automatically)
- Clean up @ts-nocheck comments and add proper eslint-disable where needed

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@tidbcloud/serverless": "^0.2.0",
+    "cloudinary": "^2.5.0",
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.9.0",
     "@sentry/nextjs": "^8.0.0",
