--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,9 +29,11 @@
     "@hookform/resolvers": "^3.9.0",
     "@sentry/nextjs": "^8.0.0",
     "@tanstack/react-query": "^5.0.0",
+    "@tidbcloud/serverless": "^0.2.0",
     "@vercel/analytics": "^1.0.0",
     "@vercel/speed-insights": "^1.0.0",
     "axios": "^1.7.7",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
     "date-fns": "^4.1.0",
