--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,9 @@ MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/laraibcreative?r
 
 # JWT
 JWT_SECRET=your_super_secret_jwt_key_change_in_production_min_32_chars
-JWT_EXPIRE=7d
+JWT_REFRESH_SECRET=your_super_secret_refresh_token_key_change_in_production_min_32_chars
+JWT_EXPIRE=15m
+JWT_REFRESH_EXPIRE=7d
 
 # Cloudinary (Image Upload)
 CLOUDINARY_CLOUD_NAME=your_cloud_name
@@ -15,12 +17,14 @@ CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
 # Email (Nodemailer)
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your_email@gmail.com
-SMTP_PASS=your_app_password
-SMTP_FROM_EMAIL=noreply@laraibcreative.com
-SMTP_FROM_NAME=LaraibCreative
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password
+EMAIL_FROM=noreply@laraibcreative.com
+EMAIL_FROM_NAME=LaraibCreative
+EMAIL_REPLY_TO=support@laraibcreative.com
 
 # WhatsApp (Twilio)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
@@ -48,3 +52,7 @@ RATE_LIMIT_MAX_REQUESTS=100
 # Security
 CORS_ORIGIN=http://localhost:3000
 ALLOW_CREDENTIALS=true
+
+# Virus Scanning (Optional - VirusTotal API)
+# Get free API key from https://www.virustotal.com/
+VIRUSTOTAL_API_KEY=your_virustotal_api_key_here
