--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -49,7 +49,7 @@ jobs:
       
       - name: Run linter
         working-directory: ./backend
-        run: npm run lint || true
+        run: npm run lint
       
       - name: Run tests
         working-directory: ./backend
@@ -58,7 +58,7 @@ jobs:
           JWT_SECRET: ${{ secrets.JWT_SECRET_TEST }}
           JWT_REFRESH_SECRET: ${{ secrets.JWT_REFRESH_SECRET_TEST }}
           NODE_ENV: test
-        run: npm test -- --passWithNoTests || true
+        run: npm test -- --passWithNoTests
       
       - name: Build verification
         working-directory: ./backend
@@ -113,11 +113,11 @@ jobs:
       
       - name: Run linter
         working-directory: ./frontend
-        run: npm run lint || true
+        run: npm run lint
       
       - name: Type check
         working-directory: ./frontend
-        run: npm run type-check || true
+        run: npm run type-check
       
       - name: Build application
         working-directory: ./frontend
